Reincarnate clone layers when they are D&D'ed into a different image

BUG:414699